#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this program.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999970 released.

        * Fixed Makefile.PL for FreeBSD.


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999969 released.

        * Fixed Makefile.PL for FreeBSD.


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999968 released.

        * Fixed Makefile.PL for FreeBSD.


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999967 released.

        * Fixed Makefile.PL for FreeBSD.


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999966 released.

        * Fixed Makefile.PL for FreeBSD.


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999965 released.

        * Fixed Makefile.PL for FreeBSD.


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999964 released.

        * Fixed Makefile.PL for FreeBSD.


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999963 released.

        * Fixed Makefile.PL for FreeBSD.


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999962 released.

        * Fixes for FreeBSD.

        * New version of Term::Menus paired with this release.


2014-07-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999961 released.

        * Fixes for FreeBSD.


2014-07-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
