@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e7bf85dc28e269a73b3d61668cece7bd54d47e64 ChangeLog
+SHA1 ce1efe58b2bac81b9881c0e00589d54d07a6ccce ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 7652c2f8671630c85e9b2127ca11060319d1d888 META.yml
-SHA1 67b60e83ea3918cc39eb5bf389c0467122f49691 Makefile.PL
+SHA1 41c0d9c7318c267ae519c071f0d03d46afb5ceea META.yml
+SHA1 3bf649e487144e48d1a3dd01bf89765464daf75e Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 6f34f878f53ab7a61dccc6779bdb239e0838b6ae lib/Net/FullAuto.pm
+SHA1 42cf07eba4ce0d7d7375e3075ad40334c3e2d313 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 1e9cdb0a94c0e832ac6240d6ae26fcab0cfebbc0 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 c6096414c9970ce64beb619cc9f0d78fe4d69993 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 c0bb9740fc2bddb295951512a7fbb6715675bcac lib/Net/FullAuto/FA_Core.pm
+SHA1 a655b2b6c4ae01424366908a772ab45df34fde6d lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTzW1qAAoJEBa/9Pad787EFl4H/2qRLBwGe2qyUEEVNz2Fh3cP
-6XrKN1YUZQp9U5FcM1YPbDuzI+92/GA9x+By6pBkc3qwz5butLvzw3UqPZ+7veEY
-jOfCo9a4rBjKzXZ9amz2uGkpSz+MBrnhIyJCfJvBeIKOGJzo81hlEWPBswGvCD3Q
-j7hYVADXuQf7ZHupdX6DWd5QuEKaa1BjDAtO4aoTdnUVOxkqgnJDgfBuUQoZKvMU
-US/Zw4U+PuhutgDNGy0bA83L5GhRq6IieN+jcDL/7Rxlb+f27f/ua44pysFERA0n
-VYlkE1jLNhyEgEsD9E5eUHCB+GGkNndrnGA4gf1Ra6HofHpNYgzAt7BVypADzyU=
-=8h8V
+iQEcBAEBAgAGBQJTztGwAAoJEBa/9Pad787EO24IAMG+a2fopYCH0UC9TBxW6ZSB
+3lmzp7z3elMDNdAuajp/zjKrsnKkZ4yTO233FdPUP9YIMVI27CninbU44hZ/xf/z
+oZaCQtMjmApHeCKWkyrgeWxJ0B/7bE7RgjOzjoXYNT7MyY1JJ9BRcQ3d6xg9T4lH
+Mxuz39TOdKVpHENx+0VZF2mQ14l+pDVGCgXiHEZnBUS6Y8gI0+PHJnm+jpHA1u/g
+KiSIA6mYN5SPuJ3FsAqaMjKLqGvd3r+eHx6WUa/M6ruThXIbCOBC9tcJzs+psu2F
+380GRZS1JoQhU0Hm3Umz5TUD+X1wln5y/n4ImhLKRdtIcv1PAoY8BVdFy7drtRA=
+=jA4r
 -----END PGP SIGNATURE-----
