@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999969';
+our $VERSION='0.9999999971';
 
 
 use 5.005;
